--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
 </head>
 
 <body onload="onPageLoad()">
+    <ul class="loading">
+        <li class="loadingLi pulsing"></li>
+        <li class="loadingLi"></li>
+        <li class="loadingLi"></li>
+        <li class="loadingLi"></li>
+        <li class="loadingLi"></li>
+        <li class="loadingLi"></li>
+        <li class="loadingLi"></li>
+        <li class="loadingLi"></li>
+        <li class="loadingLi"></li>
+        <li class="loadingLi"></li>
+      </ul>
     <div id="slides">
         <ul class="roller">
         </ul>
