--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="slideshow.css">
     <!-- <script src="slideshow.js"></script> -->
     <script src="app.js"></script>
+    <meta property="og:title" content="Are you OK?" />
+    <meta property="og:url" content="https://arditxhaferi.github.io/areuok-/" />
+    <meta property="og:image" content="/preview.png" />
 </head>
 
 <body onload="onPageLoad()">
