--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="app.js"></script>
     <meta property="og:title" content="Are you OK?" />
     <meta property="og:url" content="https://arditxhaferi.github.io/areuok-/" />
-    <meta property="og:image" content="/preview.png" />
+    <meta property="og:image" content="preview.png" />
 </head>
 
 <body onload="onPageLoad()">
