--- a/index.html
+++ b/index.html
@@ -20,12 +20,24 @@
     <link rel="stylesheet" href="slideshow.css">
     <!-- <script src="slideshow.js"></script> -->
     <script src="app.js"></script>
-    <meta property="og:title" content="Are you OK?" />
-    <meta property="og:url" content="https://arditxhaferi.github.io/areuok-/" />
-    <meta property="og:image" content="preview.png" />
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Are you OK?">
+    <meta name="description" content="Learn what feelings youve been listening lately.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://arditxhaferi.github.io/areuok-/">
+    <meta property="og:title" content="Are you OK?">
+    <meta property="og:description" content="Learn what feelings youve been listening lately.">
+    <meta property="og:image" content="preview.png">
+    <link rel="icon" 
+      type="image/png" 
+      href="favicon.ico">
 </head>
 
 <body onload="onPageLoad()">
+    <img src="preview.png" alt="preview" title="preview" style="display: none;">
     <ul class="loading">
         <li class="loadingLi pulsing"></li>
         <li class="loadingLi"></li>
