--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="app.js"></script>
 
     <!-- Primary Meta Tags -->
+    <title>Are you OK?</title>
     <meta name="title" content="Are you OK?">
     <meta name="description" content="Learn what feelings youve been listening lately.">
 
@@ -31,6 +32,13 @@
     <meta property="og:title" content="Are you OK?">
     <meta property="og:description" content="Learn what feelings youve been listening lately.">
     <meta property="og:image" content="preview.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://arditxhaferi.github.io/areuok-/">
+    <meta property="twitter:title" content="Are you OK?">
+    <meta property="twitter:description" content="Learn what feelings youve been listening lately.">
+    <meta property="twitter:image" content="preview.png">
     <link rel="icon" 
       type="image/png" 
       href="favicon.ico">
