--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     <meta property="og:url" content="https://arditxhaferi.github.io/areuok-/">
     <meta property="og:title" content="Are you OK?">
     <meta property="og:description" content="Learn what feelings youve been listening lately.">
-    <meta property="og:image" content="preview.png">
+    <meta property="og:image" content="https://i.imgur.com/xd09WC6.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://arditxhaferi.github.io/areuok-/">
     <meta property="twitter:title" content="Are you OK?">
     <meta property="twitter:description" content="Learn what feelings youve been listening lately.">
-    <meta property="twitter:image" content="preview.png">
+    <meta property="twitter:image" content="https://i.imgur.com/xd09WC6.png">
     <link rel="icon" 
       type="image/png" 
       href="favicon.ico">
