--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 </head>
 
 <body onload="onPageLoad()">
+    <a class="api" href="https://getsongbpm.com/api">BPM API</a>
     <img src="preview.png" alt="preview" title="preview" style="display: none;">
     <ul class="loading">
         <li class="loadingLi pulsing"></li>
